Refactored code to use SnakeYAML Engine
Signed-off-by: antublue <antublue@antublue.org>